--- a/app/src/main/res/layout/activity_team_division2.xml
+++ b/app/src/main/res/layout/activity_team_division2.xml
@@ -21,26 +21,67 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-                <ListView
-                    android:id="@+id/lvGrey"
-                    android:layout_width="182dp"
+                <view
+                    android:id="@+id/listViewBackgroundTeam1"
+                    class="group2.schoolproject.a02soccer.BackgroundContainer"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="@color/gray600" />
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/tablelayoutred"
+                    android:visibility="visible">
 
-                <ListView
-                    android:id="@+id/lvRed"
-                    android:layout_width="match_parent"
+                    <ListView
+                        android:id="@+id/lvTeam1"
+                        android:layout_width="182dp"
+                        android:layout_height="match_parent"
+                        android:visibility="visible" />
+
+                </view>
+
+
+                <view
+                    android:id="@+id/listViewBackgroundTeam2"
+                    class="group2.schoolproject.a02soccer.BackgroundContainer"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="@color/darkerRed" />
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_weight="1"
+                    android:background="@drawable/tablelayoutred"
+                    android:visibility="visible">
+
+                    <ListView
+                        android:id="@+id/lvTeam2"
+                        android:layout_width="187dp"
+                        android:layout_height="match_parent"
+                        android:visibility="visible" />
+
+                </view>
+
+
             </LinearLayout>
 
-            <ListView
-                android:id="@+id/lvBlau"
-                android:layout_width="150dp"
+            <view
+                android:id="@+id/listViewBackgroundAllPlayers"
+                class="group2.schoolproject.a02soccer.BackgroundContainer"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:background="@color/colorPrimary" />
+                android:background="@drawable/tablelayoutred"
+                android:visibility="visible">
+
+                <ListView
+                    android:id="@+id/lvAllPlayer"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/tablelayout"/>
+
+            </view>
+
         </RelativeLayout>
 
     </FrameLayout>
