--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -26,30 +26,40 @@
             app:srcCompat="@drawable/logo_moskitos" />
     </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/imgQRCode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@null"
-        app:srcCompat="@drawable/ic_qrcode" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingTop="10dp">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/txvName"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:ems="10" />
+            android:orientation="vertical"
+            android:paddingTop="10dp"
+            android:layout_weight="2">
 
-        <TextView
-            android:id="@+id/txvUsername"
-            android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/txvName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10" />
+
+            <TextView
+                android:id="@+id/txvUsername"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10" />
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/imgQRCode"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:ems="10" />
+            android:background="@null"
+            app:srcCompat="@drawable/ic_qrcode"
+            android:layout_weight="1"/>
     </LinearLayout>
 
 </LinearLayout>
