--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -51,15 +51,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10" />
+
         </LinearLayout>
 
         <ImageButton
             android:id="@+id/imgQRCode"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@null"
-            app:srcCompat="@drawable/ic_qrcode"
-            android:layout_weight="1"/>
+            app:srcCompat="@drawable/ic_qr_code" />
+
     </LinearLayout>
 
 </LinearLayout>
