--- a/app/src/main/res/layout/activity_team_division2.xml
+++ b/app/src/main/res/layout/activity_team_division2.xml
@@ -69,7 +69,7 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:background="@drawable/tablelayoutred"
+                android:background="@color/white"
                 android:visibility="visible">
 
                 <ListView
@@ -78,7 +78,7 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
-                    android:background="@drawable/tablelayout"/>
+                    />
 
             </view>
 
