--- a/app/src/main/res/layout/activity_team_division.xml
+++ b/app/src/main/res/layout/activity_team_division.xml
@@ -47,6 +47,13 @@
             android:id="@+id/linearLayout">
 
             <Button
+                android:id="@+id/btnQRScan"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="QRScan" />
+
+            <Button
                 android:id="@+id/btnCancel"
                 style="@style/buttonStyle"
                 android:layout_width="0dp"
