--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,7 +51,8 @@
         <item name="android:fontFamily">sans-serif-condensed</item>
         <item name="android:background">@drawable/background</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:buttonBarStyle">@drawable/buttonshape</item>
+        <item name="android:buttonStyle">@drawable/buttonshape</item>
+        <item name="android:windowMinWidthMajor">@android:dimen/dialog_min_width_major</item>
+        <item name="android:windowMinWidthMinor">@android:dimen/dialog_min_width_minor</item>
     </style>
-
 </resources>
