--- a/app/src/main/res/layout/activity_team_division.xml
+++ b/app/src/main/res/layout/activity_team_division.xml
@@ -48,6 +48,7 @@
 
             <Button
                 android:id="@+id/btnQRScan"
+                style="@style/buttonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
