--- a/app/src/main/res/layout/dialog_confirm_delete.xml
+++ b/app/src/main/res/layout/dialog_confirm_delete.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="80dp"
-    android:orientation="vertical" >
+    android:layout_height="100dp"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/txt_dia"
@@ -11,17 +11,18 @@
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:textSize="15dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btn_yes"
+            style="@style/buttonStyle"
             android:layout_width="100dp"
             android:layout_height="30dp"
             android:background="@android:color/white"
@@ -31,6 +32,7 @@
 
         <Button
             android:id="@+id/btn_no"
+            style="@style/buttonStyle"
             android:layout_width="100dp"
             android:layout_height="30dp"
             android:layout_marginLeft="5dp"
