--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,10 +46,11 @@
         <item name="windowFixedWidthMinor">90%</item>
     </style>
 
-    <style name="dlgConfirmDeleteStyle">
-        <item name="android:textColor">@color/black</item>
+    <style name="ConfirmDeleteDialog" parent="Base.Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:background">@color/lightgray</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:buttonStyle">@drawable/buttonshape</item>
+        <item name="android:buttonBarButtonStyle">@style/buttonStyle</item>
     </style>
 </resources>
