--- a/app/src/main/res/layout/activity_team_division2.xml
+++ b/app/src/main/res/layout/activity_team_division2.xml
@@ -34,7 +34,8 @@
                     <ListView
                         android:id="@+id/lvTeam1"
                         android:layout_width="182dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white"
                         android:visibility="visible" />
 
                 </view>
@@ -44,10 +45,9 @@
                     android:id="@+id/listViewBackgroundTeam2"
                     class="group2.schoolproject.a02soccer.BackgroundContainer"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
-                    android:layout_weight="1"
                     android:background="@drawable/tablelayoutred"
                     android:visibility="visible">
 
@@ -55,6 +55,7 @@
                         android:id="@+id/lvTeam2"
                         android:layout_width="187dp"
                         android:layout_height="match_parent"
+                        android:background="@color/white"
                         android:visibility="visible" />
 
                 </view>
@@ -69,13 +70,15 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:background="@color/white"
+                android:background="@drawable/tablelayoutred"
                 android:visibility="visible">
+                <!--android:background="@color/white"-->
 
                 <ListView
                     android:id="@+id/lvAllPlayer"
                     android:layout_width="200dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
                     />
