--- a/app/src/main/res/layout/opaque_text_view.xml
+++ b/app/src/main/res/layout/opaque_text_view.xml
@@ -14,17 +14,17 @@
 -->
 
 
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:background="@drawable/tablelayoutred"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/listItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:background="@drawable/tablelayoutred"
         android:gravity="center_vertical"
         android:minHeight="?android:attr/listPreferredItemHeightSmall"
         android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
