--- a/app/src/main/res/layout/dialog_confirmdelete.xml
+++ b/app/src/main/res/layout/dialog_confirmdelete.xml
@@ -7,12 +7,17 @@
         android:id="@+id/txvMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
         android:text="TextView"
-        android:textColor="@color/black"/>
+        android:textColor="@color/black"
+        android:layout_marginTop="13dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginRight="13dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +26,7 @@
         android:layout_below="@+id/txvMessage"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        >
+        android:layout_marginTop="18dp">
 
         <Button
             android:id="@+id/btnYes"
