--- a/app/src/main/res/layout/dialog_confirmdelete.xml
+++ b/app/src/main/res/layout/dialog_confirmdelete.xml
@@ -37,7 +37,7 @@
             android:text="No" />
 
         <Button
-            android:id="@+id/btnNo"
+            android:id="@+id/btnYes"
             style="@style/buttonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
