--- a/app/src/main/res/layout/dialog_confirmdelete.xml
+++ b/app/src/main/res/layout/dialog_confirmdelete.xml
@@ -34,7 +34,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="No" />
+            android:text="@string/no" />
 
         <Button
             android:id="@+id/btnYes"
@@ -42,7 +42,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Yes" />
+            android:text="@string/yes" />
     </LinearLayout>
 
 </RelativeLayout>
