--- a/app/src/main/res/layout/opaque_text_view.xml
+++ b/app/src/main/res/layout/opaque_text_view.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center_vertical"
+        android:background="@drawable/tablelayoutred"
         android:minHeight="?android:attr/listPreferredItemHeightSmall"
         android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
         android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
