--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -53,6 +53,13 @@
                     android:id="@+id/mniLogout"
                     android:icon="@drawable/ic_mosquito"
                     android:title="@string/mniLogout" />
+                <item
+                    android:id="@+id/test"
+                    android:title="Test"
+                />
+                <item
+                    android:id="@+id/qr"
+                    android:title="qr"/>
             </menu>
         </item>
     </group>
