--- a/app/src/main/res/layout/list_main_game.xml
+++ b/app/src/main/res/layout/list_main_game.xml
@@ -7,12 +7,30 @@
     android:descendantFocusability="blocksDescendants">
 
     <TextView
+        android:id="@+id/txvDayOfWeek"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1.5"
+        android:layout_margin="1dp" />
+
+    <TextView
+        android:id="@+id/txvSeparator"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.5"
+        android:layout_margin="1dp" />
+
+    <TextView
         android:id="@+id/txvDate"
         android:textColor="@color/black"
         android:textSize="20dp"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="8"
+        android:layout_weight="4"
         android:layout_margin="1dp" />
 
     <TextView
