--- a/app/src/main/res/layout/barcode_capture.xml
+++ b/app/src/main/res/layout/barcode_capture.xml
@@ -2,6 +2,7 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:id="@+id/topLayout"
@@ -26,11 +27,31 @@
 
         </group2.schoolproject.a02soccer.pkgBarcodeScanner.camera.CameraSourcePreview>
 
-        <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextView"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="34dp"
-            android:background="@drawable/background" />
+            android:layout_height="35dp"
+            android:background="@drawable/background"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_search_red" />
+
+            <AutoCompleteTextView
+                android:id="@+id/autoCompleteTextView"
+                android:layout_width="308dp"
+                android:layout_height="34dp"
+                android:background="@drawable/background" />
+
+            <ImageButton
+                android:id="@+id/imgbAdd"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_add_red" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
