--- a/app/src/main/res/layout/barcode_capture.xml
+++ b/app/src/main/res/layout/barcode_capture.xml
@@ -54,17 +54,44 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="204dp"
-            android:layout_gravity="bottom"
             android:background="@drawable/background"
-            android:orientation="vertical">
+            android:layout_gravity="bottom"
+            android:orientation="vertical"
+            android:weightSum="1">
 
             <ListView
                 android:id="@+id/lol"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/tablelayoutred" />
+                android:layout_height="144dp"
+                android:layout_weight="1.73" />
+
+            <LinearLayout
+                android:id="@+id/containerButtons"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true">
+
+                <Button
+                    android:id="@+id/btnBack"
+                    style="@style/buttonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="@string/btnBack" />
+
+                <Button
+                    android:id="@+id/btnSave"
+                    style="@style/buttonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="@string/btnSave" />
+            </LinearLayout>
+
         </LinearLayout>
 
     </FrameLayout>
