--- a/app/src/main/res/layout/activity_team_division2.xml
+++ b/app/src/main/res/layout/activity_team_division2.xml
@@ -23,7 +23,7 @@
 
                 <view
                     android:id="@+id/listViewBackgroundTeam1"
-                    class="group2.schoolproject.a02soccer.BackgroundContainer"
+                    class="pkgAdapter.BackgroundContainer"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_alignParentTop="true"
@@ -42,7 +42,7 @@
 
                 <view
                     android:id="@+id/listViewBackgroundTeam2"
-                    class="group2.schoolproject.a02soccer.BackgroundContainer"
+                    class="pkgAdapter.BackgroundContainer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
@@ -63,7 +63,7 @@
 
             <view
                 android:id="@+id/listViewBackgroundAllPlayers"
-                class="group2.schoolproject.a02soccer.BackgroundContainer"
+                class="pkgAdapter.BackgroundContainer"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
