--- a/app/src/main/res/layout/activity_editplayer.xml
+++ b/app/src/main/res/layout/activity_editplayer.xml
@@ -114,13 +114,15 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_gravity="bottom">
         <Button
             android:id="@+id/btnCancel"
             style="@style/buttonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_gravity="bottom"
             android:text="@string/btnCancel" />
 
         <Button
@@ -129,6 +131,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_gravity="bottom"
             android:text="@string/btnSave" />
     </LinearLayout>
 
