--- a/app/src/main/res/layout/activity_add_game_enter_data.xml
+++ b/app/src/main/res/layout/activity_add_game_enter_data.xml
@@ -106,8 +106,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true">
+                android:layout_toEndOf="@+id/progressBar"
+                android:layout_toRightOf="@+id/progressBar"
+                android:layout_gravity="bottom">
 
                 <Button
                     android:id="@+id/btnBack"
@@ -115,7 +116,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/btnBack" />
+                    android:layout_gravity="bottom"
+                    android:text="@string/btnBack"/>
 
                 <Button
                     android:id="@+id/btnSave"
@@ -123,8 +125,10 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/btnSave" />
+                    android:text="@string/btnSave"
+                    android:layout_gravity="bottom"/>
             </LinearLayout>
+
         </RelativeLayout>
     </RelativeLayout>
 
