--- a/app/src/main/res/layout/barcode_capture.xml
+++ b/app/src/main/res/layout/barcode_capture.xml
@@ -73,7 +73,8 @@
                 android:layout_height="55dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true">
+                android:layout_alignParentStart="true"
+                android:layout_gravity="bottom">
 
                 <Button
                     android:id="@+id/btnBack"
@@ -81,12 +82,14 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:layout_gravity="bottom"
                     android:text="@string/btnBack" />
 
                 <Button
                     android:id="@+id/btnSave"
                     style="@style/buttonStyle"
                     android:layout_width="0dp"
+                    android:layout_gravity="bottom"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="@string/btnSave" />
