--- a/app/src/main/res/layout/dialog_ok.xml
+++ b/app/src/main/res/layout/dialog_ok.xml
@@ -24,12 +24,15 @@
         android:layout_below="@+id/txvMessage"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="18dp">
+        android:layout_marginTop="18dp"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="0dp">
 
         <Button
             android:id="@+id/btnOk"
             style="@style/buttonStyle"
             android:layout_width="0dp"
+            android:layout_gravity="bottom"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/ok" />
