--- a/app/src/main/res/layout-large/activity_addplayer.xml
+++ b/app/src/main/res/layout-large/activity_addplayer.xml
@@ -48,11 +48,11 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/txvName"
-        android:layout_toLeftOf="@+id/edtName"
-        android:layout_toStartOf="@+id/edtName"
         android:padding="20dp"
         android:text="@string/Username"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:layout_toLeftOf="@+id/edtName"
+        android:layout_toStartOf="@+id/edtName" />
 
     <EditText
         android:id="@+id/edtPassword"
@@ -70,7 +70,7 @@
 
     <TextView
         android:id="@+id/txvName"
-        android:layout_width="50dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -78,32 +78,49 @@
         android:layout_toStartOf="@+id/edtName"
         android:padding="20dp"
         android:text="@string/Name"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:layout_toLeftOf="@+id/edtName" />
 
     <CheckBox
         android:id="@+id/ckbIsAdmin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/ckbIsAdmin"
-        android:textSize="30sp"
         android:layout_below="@+id/txvPassword"
+        android:layout_toEndOf="@+id/txvPassword"
         android:layout_toRightOf="@+id/txvPassword"
-        android:layout_toEndOf="@+id/txvPassword" />
+        android:text="@string/ckbIsAdmin"
+        android:textSize="24sp" />
 
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:indeterminate="true"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/containerButtons"
+        android:layout_marginTop="18dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:visibility="gone"/>
 
     <LinearLayout
+        android:id="@+id/containerButtons"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_gravity="bottom">
         <Button
             android:id="@+id/btnCancel"
             style="@style/buttonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_gravity="bottom"
             android:text="@string/btnCancel" />
         <Button
             android:id="@+id/btnAdd"
@@ -111,6 +128,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_gravity="bottom"
             android:text="@string/btnAdd" />
     </LinearLayout>
 
