--- a/app/src/main/res/layout-large/activity_editplayer.xml
+++ b/app/src/main/res/layout-large/activity_editplayer.xml
@@ -95,18 +95,35 @@
         android:layout_toRightOf="@+id/txvPassword"
         android:layout_toEndOf="@+id/txvPassword" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/containerButtons"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="18dp"
+        android:indeterminate="true"
+        android:visibility="gone" />
+
     <LinearLayout
+        android:id="@id/containerButtons"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_gravity="bottom">
         <Button
             android:id="@+id/btnCancel"
             style="@style/buttonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_gravity="bottom"
             android:text="@string/btnCancel" />
 
         <Button
@@ -115,6 +132,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_gravity="bottom"
             android:text="@string/btnSave" />
     </LinearLayout>
 
