--- a/app/src/main/res/layout-large/activity_login.xml
+++ b/app/src/main/res/layout-large/activity_login.xml
@@ -64,12 +64,14 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
+        android:layout_gravity="bottom"
         android:layout_alignParentStart="true">
 
         <Button
             android:id="@+id/btnLogin"
             style="@style/buttonStyle"
             android:layout_width="0dp"
+            android:layout_gravity="bottom"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Login" />
