New Spinner layout; Small style/strings fixes;

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,8 +32,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:selectAllOnFocus="false"
-        android:singleLine="false"
-        android:text="admin" />
+        android:singleLine="false" />
 
     <TextView
         android:id="@+id/txvPassword"
