--- a/app/src/main/res/layout-large/activity_login.xml
+++ b/app/src/main/res/layout-large/activity_login.xml
@@ -23,8 +23,6 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:selectAllOnFocus="false"
-        android:singleLine="false"
-        android:text="admin"
         android:textSize="24sp"
         android:layout_marginRight="44dp"
         android:layout_marginEnd="44dp"
@@ -74,7 +72,7 @@
             android:layout_gravity="bottom"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Login" />
+            android:text="@string/btnLogin" />
     </LinearLayout>
 
     <ProgressBar
