--- a/app/src/main/res/layout/activity_team_division.xml
+++ b/app/src/main/res/layout/activity_team_division.xml
@@ -44,6 +44,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_gravity="bottom"
             android:id="@+id/linearLayout">
 
             <Button
@@ -52,6 +53,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_gravity="bottom"
                 android:text="@string/btnCancel" />
 
             <Button
@@ -60,6 +62,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_gravity="bottom"
                 android:text="@string/btnShuffle" />
 
             <Button
@@ -68,6 +71,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_gravity="bottom"
                 android:text="@string/btnContinue" />
         </LinearLayout>
 
