Updated Sprints.xlsx document; Misc small fixes;

--- a/app/src/main/res/layout/activity_add_game_select_players.xml
+++ b/app/src/main/res/layout/activity_add_game_select_players.xml
@@ -115,7 +115,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_gravity="bottom"
-                android:text="QRCode" />
+                android:text="@string/btnQR" />
 
             <Button
                 android:id="@+id/btnSave"
