bilder für layoutauswahl

--- a/app/src/main/res/layout/layout_picker_preference.xml
+++ b/app/src/main/res/layout/layout_picker_preference.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ImageButton
         android:id="@+id/optionLayout1"
@@ -17,7 +17,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_a"/>
+        app:srcCompat="@drawable/tab_layout_transparent"/>
 
     <ImageButton
         android:id="@+id/optionLayout2"
@@ -30,6 +30,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/optionLayout1"
-        app:srcCompat="@drawable/ic_b"/>
+        app:srcCompat="@drawable/swipe_gui"/>
 
 </android.support.constraint.ConstraintLayout>
